# aumos-context-graph

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml
src/aumos_context_graph/: __init__.py  main.py  settings.py
src/aumos_context_graph/adapters/: __init__.py  embedding_engine.py  graph_client.py  kafka.py  repositories.py  vector_store.py
src/aumos_context_graph/api/: __init__.py  retrieval_routes.py  router.py  schemas.py
src/aumos_context_graph/core/: __init__.py  interfaces.py  models.py  services.py
src/aumos_context_graph/ingestion/: __init__.py  graph_constructor.py
src/aumos_context_graph/migrations/: alembic.ini  env.py
src/aumos_context_graph/migrations/versions/: 001_ctx_initial_schema.py
src/aumos_context_graph/retrieval/: __init__.py  hybrid_retriever.py  protocols.py
tests/: __init__.py  conftest.py  test_api.py  test_hybrid_retriever.py  test_repositories.py  test_services.py
